# silit-mambu

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
lib/: libcrypto.so.1.0.0  libmysqlcppconn8.so.2.8.0.16  libssl.so.1.0.0
src/: AccDB.cpp  AccOCR.cpp  license.cpp  main.cpp  main.hpp  textTrans.cpp
